-feature#2439: Allow CDEF to be used as a filter for Graph/Graph Templates
-feature#2474: Enable better version reporting for GitHub/Source/Package editions
-feature#2550: Enable use of authenticator codes for Two-Factor Authentication
-feature#2607: Allow adding sites from command line
-feature#2767: Plugins should be temporarily disabled if a required plugin is also disabled
-feature#3048: Allow different log settings for remote pollers
-feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
-feature#3187: Feature: rra path should be configurable
-feature#3192: Add ability to change options in AUTOM8 networks
-feature#3260: When a device is added, populate the created date/time
-feature#3332: Remove files graph_items.php and graph_templates_items.php
-feature#3333: Allow sequential network scans via AUTOM8
-feature#3417: Add worst poller hosts to support page, log and email warning when poller time reached defined threshold
-feature#3419: Automation should show network in discovered devices
-feature#3430: Automation should report on devices added 
-feature#3513: Add hooks for plugins to show customize graph source and customize template url
-feature#3558: Allow copy_user cli script to set various additional fields
-feature#3568; Allow exclusion of snmp fields / value(s) when adding graphs via CLI
-feature#3584: Verify passwords against Pwned databases using API
-feature#3585: CLI script to show database permissions that Cacti has
-feature#3677: Relocate the delete button for collectors to the edit page
-feature#3679: Allow searching logs by name, not just id
-feature#3724: Create Spikekill method to kill values over an absolute maximum
-feature#3725: Create the ability for Spikekill to modify only certain DSes within an RRD
-feature#3738: Ability to see MySQL permissions associated with current database user
-feature#3740: Ability to disable a site
-feature#3749: Clone a network automation