@@ -23,6 +23,7 @@ Cacti CHANGELOG
 -feature#2550: Enable use of authenticator codes for Two-Factor Authentication
 -feature#2607: Allow adding sites from command line
 -feature#2767: Plugins should be temporarily disabled if a required plugin is also disabled
+-feature#2959: Add multi threading for push out hosts (cli)
 -feature#3048: Allow different log settings for remote pollers
 -feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
 -feature#3187: Feature: rra path should be configurable
@@ -74,8 +75,8 @@ Cacti CHANGELOG
 -feature#5231: When editing a Device show in state/uptime as a date in the header
 -feature#5273: Add support for RRD --left-axis-format Options
 -feature#5278: Enhance Cacti's ping to use fping if it's installed to take advantage of sub-second timeouts
+-feature#5294: Allow Ignored Errors to be Logged such as 'No Route to host'
 -feature#5305: Remove files aggregate_items.php and color_templates_items.php and consolidate into their parents
--feature#2959: Add multi threading for push out hosts (cli)
 -feature: Allow messages to be popup notifications
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
